# format-json

./: .pre-commit-config.yaml  .pre-commit-hooks.yaml  AGENTS.md  CHANGELOG.md  README.md  muff.toml  pyproject.toml  tox.ini
.pre_commit_hook_script/: ensure_pretty_format_json_commit.py
format_json/: __init__.py  main.py
tests/: test_main.py
tests/test_data/: high_precision_float_formatted.json  util.py
