[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
name = "format-json"
version = "0.1.2"
requires-python = ">=3.10"
authors = [{name = "jsh9"}]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Build Tools",
  "Topic :: Utilities",
]
description = "A CLI and pre-commit hook for formatting JSON with configurable trailing newline handling."
keywords = ["cli", "formatter", "json", "pre-commit"]
license = {file = "LICENSE"}
readme = "README.md"

[project.optional-dependencies]
dev = [
  "flake8-broken-line",
  "flake8-clean-block",
  "flake8-picky-parentheses",
  "muff",
  "mypy",
  "pre-commit",
  "pytest",
]

[project.scripts]
format-json = "format_json.main:main"

[project.urls]
Homepage = "https://github.com/jsh9/format-json"
Issues = "https://github.com/jsh9/format-json/issues"
Repository = "https://github.com/jsh9/format-json"

[tool.hatch.build.targets.sdist]
include = [
  "/.pre-commit-hooks.yaml",
  "/CHANGELOG.md",
  "/LICENSE",
  "/README.md",
  "/format_json",
  "/muff.toml",
  "/requirements.dev",
  "/tests",
  "/tox.ini",
]

[tool.hatch.build.targets.wheel]
packages = ["format_json"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.mypy]
mypy_path = "."
python_version = "3.10"
strict = true

[tool.pytest.ini_options]
testpaths = ["tests"]
